# API-workshop

./: main.py  pyproject.toml  requirements.txt  tests.py
.github/workflows/: main.yml
app/: data.py  main.py  schema.py
tests/: test_api.py
