[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = ["Guiherme <dbagui@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
httpx = "^0.25.1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
